mudanças de visual login e página inicial

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edufactory</title>
-    <meta name="description" content="Edufactory Learning Platform" />
-    <meta name="author" content="Edufactory" />
+    <title>OneEduca</title>
+    <meta name="description" content="OneEduca Learning Platform" />
+    <meta name="author" content="OneEduca" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
 
-    <meta property="og:title" content="Edufactory" />
-    <meta property="og:description" content="Edufactory Learning Platform" />
+    <meta property="og:title" content="OneEduca" />
+    <meta property="og:description" content="OneEduca Learning Platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@edufactory" />
+    <meta name="twitter:site" content="@oneeduca" />
     <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
